Objectmodels for Scale Management